[package]
name = "agc028"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
agc028-a = { alias = "a", problem = "https://atcoder.jp/contests/agc028/tasks/agc028_a" }
agc028-b = { alias = "b", problem = "https://atcoder.jp/contests/agc028/tasks/agc028_b" }
agc028-c = { alias = "c", problem = "https://atcoder.jp/contests/agc028/tasks/agc028_c" }
agc028-d = { alias = "d", problem = "https://atcoder.jp/contests/agc028/tasks/agc028_d" }
agc028-e = { alias = "e", problem = "https://atcoder.jp/contests/agc028/tasks/agc028_e" }
agc028-f = { alias = "f", problem = "https://atcoder.jp/contests/agc028/tasks/agc028_f" }
agc028-f2 = { alias = "f2", problem = "https://atcoder.jp/contests/agc028/tasks/agc028_f2" }

[[bin]]
name = "agc028-a"
path = "src/bin/a.rs"

[[bin]]
name = "agc028-b"
path = "src/bin/b.rs"

[[bin]]
name = "agc028-c"
path = "src/bin/c.rs"

[[bin]]
name = "agc028-d"
path = "src/bin/d.rs"

[[bin]]
name = "agc028-e"
path = "src/bin/e.rs"

[[bin]]
name = "agc028-f"
path = "src/bin/f.rs"

[[bin]]
name = "agc028-f2"
path = "src/bin/f2.rs"
[dependencies]
num = "=0.2.1"
num-bigint = "=0.2.6"
num-complex = "=0.2.4"
num-integer = "=0.1.42"
num-iter = "=0.1.40"
num-rational = "=0.2.4"
num-traits = "=0.2.11"
num-derive = "=0.3.0"
ndarray = "=0.13.0"
nalgebra = "=0.20.0"
alga = "=0.9.3"
libm = "=0.2.1"
rand = { version = "=0.7.3", features = ["small_rng"] }
getrandom = "=0.1.14"
rand_chacha = "=0.2.2"
rand_core = "=0.5.1"
rand_hc = "=0.2.0"
rand_pcg = "=0.2.1"
rand_distr = "=0.2.2"
petgraph = "=0.5.0"
indexmap = "=1.3.2"
regex = "=1.3.6"
lazy_static = "=1.4.0"
ordered-float = "=1.0.2"
ascii = "=1.0.0"
permutohedron = "=0.2.4"
superslice = "=1.0.0"
itertools = "=0.9.0"
itertools-num = "=0.1.3"
maplit = "=1.0.2"
either = "=1.5.3"
im-rc = "=14.3.0"
fixedbitset = "=0.2.0"
bitset-fixed = "=0.1.0"
proconio = { version = "=0.3.6", features = ["derive"] }
text_io = "=0.1.8"
whiteread = "=0.5.0"
rustc-hash = "=1.1.0"
smallvec = "=1.2.0"
[dev-dependencies]
